# NCURSES_Example

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
include/: main_window.h  window.h
source/: main.cpp  main_window.cpp  window.cpp
